--- a/app/src/main/res/layout/character_bottom_sheet.xml
+++ b/app/src/main/res/layout/character_bottom_sheet.xml
@@ -25,7 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:src="@mipmap/ic_launcher"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerCrop"
                     app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                     android:layout_marginVertical="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
